syntax = "proto3";	

message MedicineAvailabilityMessage {
	string medicineName = 1;	
	int64 mediciQuantity = 2;	
}

message MedicineAvailabilityResponse{
	string response = 1;
	string status = 2;
}